--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <div class="menu">
             <a href="register.html" class="btn">تسجيل مستخدم جديد</a>
             <a href="login.html" class="btn">تسجيل الدخول</a>
+            <a href="quick_login.html" class="btn btn-secondary">تجربة دخول سريعة</a>
             <a href="database_test.html" class="btn btn-secondary">عرض قاعدة البيانات</a>
         </div>
     </div>
