--- a/login.html
+++ b/login.html
@@ -118,8 +118,11 @@
                 if (response.status === 200 && response.body.length > 0) {
                     const user = response.body[0];
                     if (user.password === hashedPassword) {
-                        msgDiv.textContent = "تم تسجيل الدخول بنجاح! أهلاً " + user.username;
+                        msgDiv.textContent = "تم تسجيل الدخول بنجاح! جاري توجيهك...";
                         msgDiv.className = 'msg success';
+                        setTimeout(() => {
+                            window.location.href = `profile.html?u=${encodeURIComponent(user.username)}`;
+                        }, 1000);
                     } else {
                         msgDiv.textContent = "كلمة المرور غير صحيحة";
                         msgDiv.className = 'msg error';
